Hero banner completed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
         <a href="#Work">Work</a> 
         <a href="#Contact">Contact</a> 
     </div>
-        
 </nav>
 </header>
+
+<div class="hero-banner">
+    <div class="heading">
+        Hey i am  John
+    </div>
+    <div class="subheading">
+        a Web Developer
+    </div>
+</div>
 
 <body class="form-body">
 </body>
