About us section completed

--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
 <HTML>
 <link rel="stylesheet" href="./style.css">
 <header id="header">
-<nav id="navbar">
-    <img class="logo" src="./assets/web-design-training-assignment/images/logo.png"></img>
-    <div class="routes">
-        <a href="#Home">Home</a> 
-        <a href="#About">About</a> 
-        <a href="#Work">Work</a> 
-        <a href="#Contact">Contact</a> 
-    </div>
-</nav>
+    <nav id="navbar">
+        <img class="logo" src="./assets/web-design-training-assignment/images/logo.png"></img>
+        <div class="routes">
+            <a href="#Home">Home</a>
+            <a href="#About">About</a>
+            <a href="#Work">Work</a>
+            <a href="#Contact">Contact</a>
+        </div>
+    </nav>
 </header>
 
-<div class="hero-banner">
+<div id="hero-banner">
     <div class="heading">
-        Hey i am  John
+        Hey i am John
     </div>
     <div class="subheading">
         a Web Developer
+    </div>
+</div>
+
+<div id="About-Us">
+    <div class="title">About Us</div>
+    <div class="content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, neque doloremque impedit laboriosam fuga
+            sint odit odio similique earum possimus obcaecati at hic voluptate dicta quod magni dolores, itaque enim
+            veritatis nisi! Quibusdam esse delectus harum ipsa nobis accusamus sed, odit veniam est deserunt, culpa
+            dolorem animi maxime, cum nam molestias magni. Corrupti quam, voluptatum fugit saepe dolore debitis deserunt
+            totam dolorem voluptate nobis unde recusandae sapiente quos numquam tempore maxime modi commodi. Voluptatem
+            vel, magni</p>
+            <br></br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, quaerat?</p>
+        <button class="btn">READ MORE</button>
     </div>
 </div>
 
