Projects section completed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
     </div>
 </div>
 
+<div id="project-section">
+    <div class="subheading">
+        <p class="paratitle">These are some of my projects</p>
+    </div>
+    <div class="projects">
+        <img src="./assets/web-design-training-assignment/images/img1.jpg"></img>
+        <img src="/assets/web-design-training-assignment/images/img2.jpg"></img>
+        <img src="/assets/web-design-training-assignment/images/img3.jpg"></img>
+        <img src="/assets/web-design-training-assignment/images/img4.jpg"></img>
+        <img src="/assets/web-design-training-assignment/images/img5.jpg"></img>
+        <img src="/assets/web-design-training-assignment/images/img6.jpg"></img>
+
+    </div>
+    <button class="btn">SHOW ALL</button>
+</div>
 <body class="form-body">
 </body>
 
