hover effect added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
     </nav>
 </header>
+<body>
 
 <div id="hero-banner">
     <div class="heading">
@@ -49,9 +50,11 @@
         <img src="/assets/web-design-training-assignment/images/img6.jpg"></img>
 
     </div>
-    <button class="btn">SHOW ALL</button>
+    <button class="btn effect1">SHOW ALL</button>
 </div>
-<body class="form-body">
-</body>
 
+<div id="footer">
+
+</div>
+</body>
 </HTML>
