--- a/index.html
+++ b/index.html
@@ -11,50 +11,77 @@
         </div>
     </nav>
 </header>
+
 <body>
 
-<div id="hero-banner">
-    <div class="heading">
-        Hey i am John
+    <div id="hero-banner">
+        <div class="heading">
+            Hey i am John
+        </div>
+        <div class="subheading">
+            a Web Developer
+        </div>
     </div>
-    <div class="subheading">
-        a Web Developer
-    </div>
-</div>
 
-<div id="About-Us">
-    <div class="title">About Us</div>
-    <div class="content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, neque doloremque impedit laboriosam fuga
-            sint odit odio similique earum possimus obcaecati at hic voluptate dicta quod magni dolores, itaque enim
-            veritatis nisi! Quibusdam esse delectus harum ipsa nobis accusamus sed, odit veniam est deserunt, culpa
-            dolorem animi maxime, cum nam molestias magni. Corrupti quam, voluptatum fugit saepe dolore debitis deserunt
-            totam dolorem voluptate nobis unde recusandae sapiente quos numquam tempore maxime modi commodi. Voluptatem
-            vel, magni</p>
+    <div id="About-Us">
+        <div class="title">About Us</div>
+        <div class="content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, neque doloremque impedit laboriosam
+                fuga
+                sint odit odio similique earum possimus obcaecati at hic voluptate dicta quod magni dolores, itaque enim
+                veritatis nisi! Quibusdam esse delectus harum ipsa nobis accusamus sed, odit veniam est deserunt, culpa
+                dolorem animi maxime, cum nam molestias magni. Corrupti quam, voluptatum fugit saepe dolore debitis
+                deserunt
+                totam dolorem voluptate nobis unde recusandae sapiente quos numquam tempore maxime modi commodi.
+                Voluptatem
+                vel, magni</p>
             <br></br>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, quaerat?</p>
-        <button class="btn">READ MORE</button>
+            <button class="btn">READ MORE</button>
+        </div>
     </div>
-</div>
 
-<div id="project-section">
-    <div class="subheading">
-        <p class="paratitle">These are some of my projects</p>
+    <div id="project-section">
+        <div class="subheading">
+            <p class="paratitle">These are some of my projects</p>
+        </div>
+        <div class="projects">
+            <img src="./assets/web-design-training-assignment/images/img1.jpg"></img>
+            <img src="/assets/web-design-training-assignment/images/img2.jpg"></img>
+            <img src="/assets/web-design-training-assignment/images/img3.jpg"></img>
+            <img src="/assets/web-design-training-assignment/images/img4.jpg"></img>
+            <img src="/assets/web-design-training-assignment/images/img5.jpg"></img>
+            <img src="/assets/web-design-training-assignment/images/img6.jpg"></img>
+
+        </div>
+        <button class="btn effect1">SHOW ALL</button>
     </div>
-    <div class="projects">
-        <img src="./assets/web-design-training-assignment/images/img1.jpg"></img>
-        <img src="/assets/web-design-training-assignment/images/img2.jpg"></img>
-        <img src="/assets/web-design-training-assignment/images/img3.jpg"></img>
-        <img src="/assets/web-design-training-assignment/images/img4.jpg"></img>
-        <img src="/assets/web-design-training-assignment/images/img5.jpg"></img>
-        <img src="/assets/web-design-training-assignment/images/img6.jpg"></img>
 
+    <div id="footer">
+        <div class="footerbody">
+            <p class="heading">
+                Let's work together
+            </p>
+            <div class="caption"><i>
+
+                    How do you take your coffe?
+                </i>
+            </div>
+            <div class="socials">
+                <img src="/assets/web-design-training-assignment/images/facebook-icon.png"></img>
+                <img src="/assets/web-design-training-assignment/images/twitter-icon.png"></img>
+                <img src="assets/web-design-training-assignment/images/instagram-icon.png"></img>
+
+            </div>
+        </div>
+        <hr class="line">
+        </hr>
+        <div>
+            <p class="heading3">
+                copyright@2025
+            </p>
+        </div>
     </div>
-    <button class="btn effect1">SHOW ALL</button>
-</div>
-
-<div id="footer">
-
-</div>
 </body>
+
 </HTML>
