changed all px values to rem

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <link rel="stylesheet" href="./style.css">
-<header id="header">
+<!-- <header id="header">
     <nav id="navbar">
         <img class="logo" src="./assets/web-design-training-assignment/images/logo.png"></img>
         <div class="routes">
@@ -10,7 +10,7 @@
             <a href="#Contact">Contact</a>
         </div>
     </nav>
-</header>
+</header> -->
 
 <body>
 
