made responsive for small screens

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <HTML>
+    <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="./style.css">
 <!-- <header id="header">
     <nav id="navbar">
@@ -24,7 +25,9 @@
     </div>
 
     <div id="About-Us">
-        <div class="title">About Us</div>
+        <p class="title">
+            About Us
+        </p>
         <div class="content">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, neque doloremque impedit laboriosam
                 fuga
