added hamburger menu

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <HTML>
     <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="./style.css">
-<!-- <header id="header">
+<header id="header">
     <nav id="navbar">
-        <img class="logo" src="./assets/web-design-training-assignment/images/logo.png"></img>
+        <img class="logo" src="./assets/web-design-training-assignment/images/logo.png" alt="Logo">
+
+        <div class="hamburger">☰</div>
         <div class="routes">
             <a href="#Home">Home</a>
             <a href="#About">About</a>
@@ -11,7 +13,7 @@
             <a href="#Contact">Contact</a>
         </div>
     </nav>
-</header> -->
+</header>
 
 <body>
 
